Implement authentication slice
